<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context="com.example.michailkoupparis.songle.SongSelection"
    >

    <TextView
        android:id="@+id/song_selection_title"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:text="@string/song_selection"
        android:gravity="center"
        android:textSize="40sp"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/MintCream"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:layout_constraintHorizontal_bias="0.698" />

    <TextView
        android:id="@+id/current_song_num"
        android:layout_width="249dp"
        android:layout_height="39dp"
        android:textStyle="bold"
        android:textColor="@color/MintCream"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintVertical_bias="0.882" />

    <GridView
        android:id="@+id/song_selection_grid"
        android:layout_width="305dp"
        android:layout_height="382dp"
        android:numColumns="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/go_to_song_player"
        android:layout_width="197dp"
        android:layout_height="39dp"
        android:text="@string/go_to_found_songs"
        android:textColor="@color/MintCream"
        android:background="@drawable/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969"
        app:layout_constraintHorizontal_bias="0.504" />


</android.support.constraint.ConstraintLayout>
