...
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/text_dialog"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:text="@string/wrong_answer"
        android:gravity="center_horizontal"
        android:layout_below="@+id/a"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btn_ok_dialog"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@color/DeepSkyBlue"
        android:textColor="#ffffffff"
        android:text= "@string/OK"
        app:layout_constraintLeft_toLeftOf="parent"
...
