...
        android:layout_height="48dp"
        android:background="@drawable/next"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/cancel_dialog"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:background="@drawable/home_button"
        android:textColor="#ffffffff"
        android:text="@string/cancel"
        android:layout_marginTop="11dp"
...
