...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    tools:context="com.example.michailkoupparis.songle.SongPlayer">

    <TextView
        android:id="@+id/song_selection_title"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:text="@string/song_player_title"
        android:gravity="center"
        android:textSize="35sp"
        android:typeface="serif"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        app:layout_constraintHorizontal_bias="0.0" />

    <ListView
        android:id="@+id/found_songs_container"
        android:layout_width="368dp"
        android:layout_height="385dp"
        android:background="@drawable/border_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
